[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/RunScreen.gd" id="1_run"]

[node name="RunScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_run")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.08, 0.08, 0.1, 1)

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 42
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 42

[node name="Root" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Header" type="Label" parent="Margin/Root"]
layout_mode = 2
text = "Run"

[node name="BodyText" type="RichTextLabel" parent="Margin/Root"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = ""

[node name="Choices" type="VBoxContainer" parent="Margin/Root"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Bottom" type="HBoxContainer" parent="Margin/Root"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ExitRunButton" type="Button" parent="Margin/Root/Bottom"]
layout_mode = 2
text = "End Run"

[node name="StatusLabel" type="Label" parent="Margin/Root/Bottom"]
layout_mode = 2
text = ""
